[package]
name = "lilv-sys"
version = "0.1.0"
authors = ["Will Medrano <will.s.medrano@gmail.com>"]
description = "FFI for lilv, a C library to make the use of LV2 plugins simple"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
